@@ -67,7 +67,7 @@ daemon_status::daemon_status()
 	int HZ;
 	if (!daemon_pid.empty()) {
 		string const exec =
-			op_follow_link(string("/proc/") + daemon_pid + "/exe");
+			follow_link(string("/proc/") + daemon_pid + "/exe");
 		if (exec.empty())
 			daemon_pid.erase();
 		else
@@ -85,7 +85,7 @@ daemon_status::daemon_status()
 
 		while ((dirent = readdir(dir))) {
 			string const exec =
-				op_follow_link(string("/proc/")
+				follow_link(string("/proc/")
 				               + dirent->d_name + "/exe");
 			string const name = basename(exec);
 			if (name != "oprofiled")
