@@ -29,9 +29,7 @@ using namespace std;
 
 bool is_directory(string const & dirname)
 {
-	struct stat st;
-
-	return !stat(dirname.c_str(), &st) && S_ISDIR(st.st_mode);
+	return op_is_directory(dirname.c_str());
 }
 
 
@@ -49,7 +47,7 @@ bool is_files_identical(string const & file1, string const & file2)
 }
 
 
-string const op_follow_link(string const & name)
+string const follow_link(string const & name)
 {
 	string tmp = name;
 	int iterate = 20;
@@ -162,24 +160,10 @@ static string erase_trailing_path_separator(string const & path_name)
 
 string dirname(string const & file_name)
 {
-	string result = erase_trailing_path_separator(file_name);
-
-	if (result.find_first_of('/') == string::npos)
-		return ".";
-
-	if (result.length() == 1)
-		// catch result == "/"
-		return result;
-
-	size_t pos = result.find_last_of('/');
-	if (pos == 0)
-		// "/usr" must return "/"
-		pos = 1;
-
-	result.erase(pos, result.length() - pos);
-
-	// "////usr" must return "/"
-	return erase_trailing_path_separator(result);
+	char * temp = op_dirname(file_name.c_str());
+	string result(temp);
+	free(temp);
+	return result;
 }
 
 
