@@ -1,5 +1,16 @@
 2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* libutil/op_file.c:
+	* libutil/op_file.h: implement dirname(), is_directory() and
+	  op_follow_link()
+	* daemon/oprofiled.c: follow symlink for image filter
+	* libutil++/file_manip.cpp:
+	* libutil++/file_manip.h:
+	* gui/oprof_start_util.cpp:
+	* libpp/profile_spec.cpp:  rename op_follow_link() to follow_link()
+
+2003-10-31  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libutil/tests/file_tests.c: "//usr" --> "//usr"
 	* libutil++/tests/.cvsignore:
 	* libutil++/tests/Makefile.am:
